--- a/codescript.html
+++ b/codescript.html
@@ -35,7 +35,7 @@
 </head>
 <body>
     <div class="instruction" id="instruction">Tap anywhere to go fullscreen</div>
-    <iframe id="prototype" src="https://www.figma.com/proto/1pG1lar6FB2YU9g4tauYD6/Pigeon-App?page-id=54%3A123&node-id=1164-17708&node-type=canvas&viewport=548%2C380%2C0.07&t=ILYfHOvAIVl6ZGdX-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=1164%3A17708&share=1&show-proto-sidebar=1?fullscreen"></iframe>
+    <iframe id="prototype" src="https://www.figma.com/proto/1pG1lar6FB2YU9g4tauYD6/Pigeon-App?page-id=54%3A123&node-id=1164-17708&node-type=canvas&viewport=548%2C380%2C0.07&t=ILYfHOvAIVl6ZGdX-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=1164%3A17708&share=1&show-proto-sidebar=1&fullscreen"></iframe>
 
     <script>
         const prototype = document.getElementById("prototype");
@@ -58,6 +58,13 @@
             requestFullscreen();
             instruction.style.display = "none"; // Hide instruction after tap
         });
+
+        // Redirect to index.html after a tap to share a new URL
+        window.history.replaceState({}, document.title, window.location.pathname); // Remove the old URL parameters
+
+        // Optional: provide a new URL to share (with index.html)
+        const newUrl = window.location.origin + "/index.html";
+        console.log("Share this URL:", newUrl); // You can also display this URL somewhere or share it
     </script>
 </body>
 </html>
