--- a/index.html
+++ b/index.html
@@ -3,10 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prototype</title>
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <title>Figma Prototype</title>
+    <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            height: 100%;
+            cursor: pointer;
+        }
+        iframe {
+            border: none;
+            width: 100vw;
+            height: 100vh;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to My Prototype</h1>
-    <p>Click <a href="your-prototype-page.html">here</a> to view the prototype.</p>
+    <!-- Fullscreen Prototype Embed -->
+    <iframe id="prototype" src="https://www.figma.com/proto/1pG1lar6FB2YU9g4tauYD6/Pigeon-App?page-id=54%3A123&node-id=1164-17708&node-type=canvas&viewport=548%2C380%2C0.07&t=ILYfHOvAIVl6ZGdX-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=1164%3A17708&share=1&show-proto-sidebar=1?fullscreen"></iframe>
+
+    <script>
+        // Fullscreen API for mobile browser
+        function requestFullscreen() {
+            const elem = document.documentElement;
+            if (elem.requestFullscreen) {
+                elem.requestFullscreen();
+            } else if (elem.webkitRequestFullscreen) { // Safari
+                elem.webkitRequestFullscreen();
+            } else if (elem.msRequestFullscreen) { // IE11
+                elem.msRequestFullscreen();
+            }
+        }
+
+        // Add tap listener to enter fullscreen
+        document.body.addEventListener("click", () => {
+            requestFullscreen();  // Activate fullscreen on tap
+        });
+    </script>
 </body>
 </html>
