--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <title>Pigeon App Prototype</title>
+    <title>Figma Prototype</title>
     <style>
         html, body {
             margin: 0;
             padding: 0;
             overflow: hidden;
             height: 100%;
-            cursor: pointer;
+            cursor: pointer; /* Indicates the user can interact */
         }
         iframe {
             border: none;
@@ -22,25 +22,24 @@
     </style>
 </head>
 <body>
-    <!-- Fullscreen Prototype Embed -->
-    <iframe id="prototype" src="https://www.figma.com/proto/1pG1lar6FB2YU9g4tauYD6/Pigeon-App?page-id=54%3A123&node-id=1164-17708&node-type=canvas&viewport=548%2C380%2C0.07&t=ILYfHOvAIVl6ZGdX-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=1164%3A17708&share=1&show-proto-sidebar=1?fullscreen"></iframe>
+    <iframe id="prototype" src="https://www.figma.com/proto/1pG1lar6FB2YU9g4tauYD6/Pigeon-App" width="100%" height="100%"></iframe>
 
     <script>
-        // Fullscreen API for mobile browser
+        // Fullscreen API
         function requestFullscreen() {
-            const elem = document.documentElement;
+            const elem = document.documentElement; // Make the entire page fullscreen
             if (elem.requestFullscreen) {
                 elem.requestFullscreen();
-            } else if (elem.webkitRequestFullscreen) { // Safari
+            } else if (elem.webkitRequestFullscreen) { /* Safari */
                 elem.webkitRequestFullscreen();
-            } else if (elem.msRequestFullscreen) { // IE11
+            } else if (elem.msRequestFullscreen) { /* IE11 */
                 elem.msRequestFullscreen();
             }
         }
 
-        // Add tap listener to enter fullscreen
+        // Add tap/click listener to enter fullscreen
         document.body.addEventListener("click", () => {
-            requestFullscreen();  // Activate fullscreen on tap
+            requestFullscreen();
         });
     </script>
 </body>
